Написал тест для маппера в микросервисе History